<resources>
    <!-- Activities -->
    <string name="app_name" translatable="false">ISSTracker</string>
    <string name="activity_humans_labels">Humans</string>
    <string name="activity_map_labels">Map</string>
    <string name="activity_settings_label">Settings</string>
    <string name="iss_pos_request_btn" translatable="false">Get position!</string>
    <string name="iss_request_text" translatable="false">Get your first position</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_passes">ISS passes in your sky</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_observe_info">How to observe the ISS</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_astros">Astros</string>

    <!-- Home activity action bar item titles -->

    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="btn_about_title">About ISSTracker</string>
    <string name="btn_about_content">Data brought to you by this application come from open-source
        third parties. Some are calculated with your location, given by Google Play services.\nAll
        images are royalty-free and come from www.unsplash.com stock photo library.</string>

    <!-- Home activity -->

    <string name="sentence" translatable="false">iss speed:</string>
    <string name="value" translatable="false">7.66 km/s</string>

    <!-- Passes activity -->

    <string name="tab_text_1">Pass 1</string>
    <string name="tab_text_2">Pass 2</string>
    <string name="tab_text_3">Pass 3</string>
    <string name="action_observation_info">How to observe the ISS</string>
    <string name="passes_section_format">Pass %1$d</string>

    <string name="pass_no_pass_label">no pass found</string>
    <string name="pass_count_first">first</string>
    <string name="pass_count_second">second</string>
    <string name="pass_count_third">third</string>
    <string name="pass_no_pass_message">unable to find a %1$s pass, the iss seems not to cross your sky with at least %2$d seconds of visibility over the next %3$d day(s) as parameters.</string>

    <string name="set_alarm_button">Notify me</string>
    <string name="cancel_alarm_button">Cancel alarms</string>
    <string name="time_at_label">at</string>
    <string name="channel_name" translatable="false">Pass Notifications Channel</string>
    <string name="channel_description" translatable="false">Channel for notifications indicating the ISS is passing</string>


    <!-- ISS Observation information fragment -->

    <string name="hello_fragment" translatable="false">Hello fragment</string>
    <string name="iss_observe_info_title">What does all this sighting information mean?</string>

    <string name="iss_observe_info_time_title" translatable="false">time</string>
    <string name="iss_observe_info_time">Time is when the sighting opportunity will begin in your
        local time zone. All sightings will occur within a few hours before or after sunrise or
        sunset. This is the optimum viewing period as the sun reflects off the space station and
        contrasts against the darker sky.</string>

    <string name="iss_observe_info_visible_title" translatable="false">visible</string>
    <string name="iss_observe_info_visible">Visible is the maximum time period the space station is
        visible before crossing back below the horizon.</string>

    <string name="iss_observe_info_maxheight_title" translatable="false">max height</string>
    <string name="iss_observe_info_maxheight">Max Height is measured in degrees (also known as
        elevation). It represents the height of the space station from the horizon in the night
        sky. The horizon is at zero degrees, and directly overhead is ninety degrees. If you hold
        your fist at arm’s length and place your fist resting on the horizon, the top will be about
        10 degrees.</string>

    <string name="iss_observe_info_appears_title" translatable="false">appears</string>
    <string name="iss_observe_info_appears">Appears is the location in the sky where the station
        will be visible first. This value, like maximum height, also is measured in degrees from
        the horizon. The letters represent compass directions - N is north, WNW is west by
        northwest, and so on.</string>

    <string name="iss_observe_info_disappears_title" translatable="false">disappears</string>
    <string name="iss_observe_info_disappears">Disappears represents where in the night sky the
        International Space Station will leave your field of view.</string>

    <string name="iss_observe_info_important_title">Important</string>
    <string name="iss_observe_info_important">The International Space Station orbits with
        an inclination of 51.6 degrees. This means that, as it orbits, the farthest north and south 
        of the Equator it will ever go is 51.6 degrees latitude. If you live north or south of 51.6 
        degrees, the ISS will never go directly over your head- this includes places like Alaska.</string>

    <string name="iss_observe_info_spot_iss">The space station looks like an airplane or a very
        bright star moving across the sky, except it doesn\'t have flashing lights or change
        direction. It will also be moving considerably faster than a typical airplane (airplanes
        generally fly at about 600 miles (965 km) per hour; the space station flies at 17,500 miles
        (28,000 km) per hour).</string>

    <!-- Nav drawer -->

    <string name="nav_drawer_open" translatable="false">Open drawer</string>
    <string name="nav_drawer_close" translatable="false">Close drawer</string>
    <string name="nav_header_title" translatable="false">iss tRAcKer</string>
    <string name="nav_menu_humans">Home</string>
    <string name="nav_menu_map">Map</string>
    <string name="nav_menu_passes">Passes</string>
    <string name="nav_menu_dashboard">Dashboard</string>
    <string name="nav_menu_astros">Astros</string>

    <!-- Other -->

    <string name="api_error">unable to retrieve data</string>
    <string name="api_pending_sentence">pending data…</string>
    <string name="location_pending_sentence">retrieving your position…</string>
    <string name="location_error">unable to retrieve your position</string>

    <!-- Astronaut -->
    <string name="countryFlagContentDescription" translatable="false">Country flag this astronaut is from</string>
    <string name="astronautTwitterContentDescription" translatable="false">Icon to link to astronaut\'s twitter page</string>
    <string name="astronautWikiContentDescription" translatable="false">Icon to link to astronaut\'s wiki page</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="pref_header_passes">Passes search</string>

    <string name="min_visibility_title">Minimum visibility</string>
    <string name="min_visibility_summary">Minimum visibility a pass must have</string>
    <string name="min_visibility_unit">seconds</string>

    <string name="days_scope_title">Days scope</string>
    <string name="days_scope_summary">Days scope within to search passes</string>
    <string name="days_scope_unit">day(s)</string>
    <string name="action_cancel_recall">Cancel next recall</string>

</resources>
