<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_white_24dp"
            android:title="@string/nav_menu_map" />

        <item
            android:id="@+id/nav_passes"
            android:icon="@drawable/ic_telescope"
            android:iconTint="@color/colorPrimaryText"
            android:title="@string/nav_menu_passes" />

        <item
            android:id="@+id/nav_astros"
            android:icon="@drawable/ic_account_multiple"
            android:iconTint="@color/colorPrimaryText"
            android:title="@string/nav_menu_astros" />
    </group>

</menu>
